--- a/client/landing/package.json
+++ b/client/landing/package.json
@@ -19,33 +19,33 @@
   "dependencies": {
     "geopattern": "1.2.3",
     "indefinite-article": "0.0.2",
-    "jquery": "2.2.0",
+    "jquery": "3.1.1",
     "js-cookie": "2.1.3",
-    "kd.js": "1.1.20",
-    "payment": "2.1.3"
+    "kd.js": "1.1.27",
+    "payment": "2.1.4"
   },
   "devDependencies": {
-    "bluebird": "3.1.5",
-    "browserify": "13.0.0",
-    "coffeeify": "2.0.1",
-    "del": "2.2.0",
-    "gulp": "3.9.0",
+    "bluebird": "3.4.7",
+    "browserify": "13.3.0",
+    "coffeeify": "2.1.0",
+    "del": "2.2.2",
+    "gulp": "3.9.1",
     "gulp-buffer": "0.0.2",
-    "gulp-concat": "2.6.0",
-    "gulp-if": "2.0.0",
-    "gulp-imagemin": "2.4.0",
+    "gulp-concat": "2.6.1",
+    "gulp-if": "2.0.2",
+    "gulp-imagemin": "3.1.1",
     "gulp-kd-pistachio-compiler": "0.1.1",
     "gulp-livereload": "3.8.1",
-    "gulp-notify": "^2.2.0",
+    "gulp-notify": "2.2.0",
     "gulp-rename": "1.2.2",
     "gulp-shell": "0.5.2",
     "gulp-stream": "0.0.2",
-    "gulp-stylus": "2.3.0",
-    "gulp-uglify": "1.5.1",
-    "gulp-util": "3.0.7",
-    "gulp.spritesmith": "6.0.1",
+    "gulp-stylus": "2.6.0",
+    "gulp-uglify": "2.0.0",
+    "gulp-util": "3.0.8",
+    "gulp.spritesmith": "6.2.1",
     "htmlencode": "0.0.4",
-    "imagemin-pngquant": "4.2.0",
+    "imagemin-pngquant": "5.0.0",
     "minimist": "1.2.0",
     "vinyl-source-stream": "1.1.0"
   }
