--- a/package.json
+++ b/package.json
@@ -19,108 +19,108 @@
     "node": "6"
   },
   "dependencies": {
-    "amqp": "0.2.4",
-    "analytics-node": "1.2.2",
-    "appmetrics": "1.0.13",
-    "async": "1.5.2",
-    "aws-sdk": "2.1.4",
-    "bluebird": "1.0.8",
-    "body-parser": "1.12.2",
+    "amqp": "0.2.6",
+    "analytics-node": "2.1.0",
+    "appmetrics": "1.2.0",
+    "async": "2.1.4",
+    "aws-sdk": "2.7.21",
+    "bluebird": "3.4.7",
+    "body-parser": "1.15.2",
     "busboy": "0.2.13",
-    "cache-manager": "1.2.2",
+    "cache-manager": "2.3.0",
     "cli-table": "0.3.1",
     "codo": "2.1.2",
     "coffee-cache": "1.0.2",
-    "coffee-script": "1.8",
+    "coffee-script": "1.8.0",
     "coffee-unused": "0.2.0",
     "coffeenode-zxcvbn": "1.0.1",
-    "colors": "0.6.0-1",
-    "cookie-parser": "1.3.4",
-    "cors": "2.1.1",
-    "cron": "1.0.1",
-    "csv": "0.3.6",
-    "csv-parse": "1.1.0",
-    "curlrequest": "0.5.2",
-    "dateformat": "1.0.2-1.2.3",
-    "debug": "2.3.0",
-    "deep-equal": "0.1.2",
-    "disposable-email-domains": "1.0.4",
+    "colors": "1.1.2",
+    "cookie-parser": "1.4.3",
+    "cors": "2.8.1",
+    "cron": "1.2.1",
+    "csv": "1.1.0",
+    "csv-parse": "1.1.7",
+    "curlrequest": "1.0.1",
+    "dateformat": "2.0.0",
+    "debug": "2.6.0",
+    "deep-equal": "1.0.1",
+    "disposable-email-domains": "1.0.14",
     "dns": "0.2.2",
-    "dogapi": "0.1.8",
-    "embedly": "1.0.4",
-    "es": "0.4.x",
-    "eventemitter2": "1.0.3",
-    "express": "4.9.5",
-    "faker": "1.1.0",
-    "geoip-lite": "1.1.6",
+    "dogapi": "2.6.0",
+    "embedly": "2.1.0",
+    "es": "0.5.2",
+    "eventemitter2": "2.2.1",
+    "express": "4.14.0",
+    "faker": "3.1.0",
+    "geoip-lite": "1.1.8",
     "git-rev": "0.2.1",
-    "github": "0.2.4",
-    "gitlab": "1.7.0",
-    "googleapis": "1.1.5",
-    "gulp": "3.8.11",
+    "github": "7.3.1",
+    "gitlab": "1.7.1",
+    "googleapis": "16.0.0",
+    "gulp": "3.9.1",
     "hat": "0.0.3",
-    "helmet": "0.2.4",
-    "highlight.js": "7.3.0",
-    "htmlencode": "0.0.3",
-    "ip": "1.1.3",
-    "js-yaml": "3.3.1",
-    "json-format": "0.0.1",
+    "helmet": "3.3.0",
+    "highlight.js": "9.9.0",
+    "htmlencode": "0.0.4",
+    "ip": "1.1.4",
+    "js-yaml": "3.7.0",
+    "json-format": "1.0.0",
     "jsonify": "0.0.0",
-    "jsonwebtoken": "5.0.1",
+    "jsonwebtoken": "7.2.1",
     "kite.js": "0.3.9",
     "konstraints": "0.1.5",
-    "lodash": "3.10.1",
-    "lodash.clonedeep": "3.0.2",
-    "marked": "0.3.1",
-    "mime": "1.2.x",
-    "minimist": "0.0.8",
-    "mkdirp": "0.3.2",
-    "mongodb": "1.4.18",
-    "nib": "1.1.0",
+    "lodash": "4.17.4",
+    "lodash.clonedeep": "4.5.0",
+    "marked": "0.3.6",
+    "mime": "1.3.4",
+    "minimist": "1.2.0",
+    "mkdirp": "0.5.1",
+    "mongodb": "2.1.21",
+    "nib": "1.1.2",
     "node-dogstatsd": "0.0.6",
     "node-sockjs-client": "1.0.7",
     "node-syntaxhighlighter": "0.8.1",
-    "node-uuid": "1.4.1",
-    "nodemailer": "0.5.15",
-    "oauth": "0.9.10",
+    "node-uuid": "1.4.7",
+    "nodemailer": "2.7.0",
+    "oauth": "0.9.15",
     "on-finished": "2.3.0",
-    "opentok": "2.2.5",
-    "optimist": "0.3.1",
+    "opentok": "2.5.0",
+    "optimist": "0.6.1",
     "papertrail": "1.0.2",
-    "progress": "0.0.4",
-    "ratelimit.js": "1.7.0",
-    "read": "1.0.5",
-    "redis": "0.12.1",
-    "request": "2.54.0",
-    "sendmail": "0.2.1",
-    "shortid": "2.2.2",
+    "progress": "1.1.8",
+    "ratelimit.js": "1.8.0",
+    "read": "1.0.7",
+    "redis": "2.6.3",
+    "request": "2.79.0",
+    "sendmail": "1.1.1",
+    "shortid": "2.2.6",
     "simple-recaptcha": "0.0.3",
-    "speakeasy": "1.0.3",
+    "speakeasy": "2.0.0",
     "stripcolorcodes": "0.1.0",
-    "stylus": "0.37.0",
-    "terraform-yml": "hakankaradis/stack-docs-search",
+    "stylus": "0.54.5",
+    "terraform-yml": "1.0.10",
     "toml-js": "0.0.8",
-    "tough-cookie": "0.12.1",
+    "tough-cookie": "2.3.2",
     "traverse": "0.6.6",
-    "ua-parser-js": "0.6.2",
-    "uglify-js": "2.4.19",
-    "underscore": "1.5.2",
-    "url": "0.4.9",
+    "ua-parser-js": "0.7.12",
+    "uglify-js": "2.7.5",
+    "underscore": "1.8.3",
+    "url": "0.11.0",
     "url-join": "1.1.0",
-    "url-parse": "1.1.3",
-    "validator": "0.2.0",
-    "winston": "2.1.1",
-    "winston-papertrail": "1.0.2",
-    "xml2js": "0.2.6",
-    "yield-siftscience": "0.0.8"
+    "url-parse": "1.1.7",
+    "validator": "6.2.1",
+    "winston": "2.3.0",
+    "winston-papertrail": "1.0.4",
+    "xml2js": "0.4.17",
+    "yield-siftscience": "0.2.0"
   },
   "devDependencies": {
-    "chai": "2.2.0",
-    "coffeelint": "1.11.1",
+    "chai": "3.5.0",
+    "coffeelint": "1.16.0",
     "crypto": "0.0.3",
     "mocha": "2.2.4",
     "mongodb-migrate": "2.0.1",
-    "which": "1.0.5"
+    "which": "1.2.12"
   },
   "optionalDependencies": {}
 }
