--- a/client/package.json
+++ b/client/package.json
@@ -59,6 +59,7 @@
     "react-autocomplete": "1.3.1",
     "react-dom": "15.4.1",
     "react-flexbox-grid": "0.10.2",
+    "react-flip-move": "2.7.1",
     "react-immutable-render-mixin": "0.8.1",
     "react-input-mask": "0.6.7",
     "react-mixin": "3.0.5",
