--- a/wercker.yml
+++ b/wercker.yml
@@ -146,7 +146,9 @@ build:
           [ "$CONFIG" != "prod" ] && scripts/delete-deployment-credentials.sh
     - script:
         name: check connectivity
-        code: scripts/wercker/run-command scripts/wercker/check-connectivity INSTANCE_DATA
+        code: |
+          scripts/wercker/run-command scripts/wercker/check-connectivity INSTANCE_DATA
+          scripts/wercker/run-command scripts/wercker/check-connectivity-rainforest RAINFOREST_HOST
     - script:
         name: test nodejs
         code: scripts/wercker/run-command scripts/node-testing/run-tests INSTANCE_DATA
