vendor: add go-openapi/runtime

--- a/go/src/glide.yaml
+++ b/go/src/glide.yaml
@@ -276,6 +276,7 @@ import:
 - package: github.com/Banno/terraform-provider-marathon
 - package: github.com/gambol99/go-marathon
 - package: github.com/donovanhide/eventsource
+- package: github.com/go-openapi/runtime
 ignore:
 - koding/tools/logger
 - config
