--- a/go/src/glide.yaml
+++ b/go/src/glide.yaml
@@ -280,6 +280,7 @@ import:
 - package: github.com/go-openapi/validate
 - package: github.com/go-openapi/swag
 - package: github.com/go-openapi/strfmt
+- package: github.com/go-openapi/errors
 ignore:
 - koding/tools/logger
 - config
