vendor: add go-openapi/spec

--- a/go/src/glide.yaml
+++ b/go/src/glide.yaml
@@ -286,6 +286,7 @@ import:
 - package: github.com/go-openapi/analysis
 - package: github.com/go-openapi/jsonpointer
 - package: github.com/asaskevich/govalidator
+- package: github.com/go-openapi/spec
 ignore:
 - koding/tools/logger
 - config
