--- a/go/src/glide.yaml
+++ b/go/src/glide.yaml
@@ -287,6 +287,7 @@ import:
 - package: github.com/go-openapi/jsonpointer
 - package: github.com/asaskevich/govalidator
 - package: github.com/go-openapi/spec
+- package: github.com/go-openapi/jsonreference
 ignore:
 - koding/tools/logger
 - config
