vendor: add stretchr/testify

--- a/go/src/glide.yaml
+++ b/go/src/glide.yaml
@@ -290,6 +290,7 @@ import:
 - package: github.com/go-openapi/jsonreference
 - package: github.com/PuerkitoBio/purell
 - package: github.com/docker/go-units
+- package: github.com/stretchr/testify
 ignore:
 - koding/tools/logger
 - config
