--- a/go/src/glide.yaml
+++ b/go/src/glide.yaml
@@ -291,6 +291,7 @@ import:
 - package: github.com/PuerkitoBio/purell
 - package: github.com/docker/go-units
 - package: github.com/stretchr/testify
+- package: github.com/PuerkitoBio/urlesc
 ignore:
 - koding/tools/logger
 - config
