--- a/client/landing/package.json
+++ b/client/landing/package.json
@@ -20,6 +20,7 @@
     "geopattern": "1.2.3",
     "indefinite-article": "0.0.2",
     "jquery": "2.2.0",
+    "js-cookie": "2.1.3",
     "kd.js": "1.1.20",
     "payment": "2.1.3"
   },
