Execute local gulp in landing Makefile
Signed-off-by: Sonmez Kartal <sonmez@koding.com>

--- a/client/landing/Makefile
+++ b/client/landing/Makefile
@@ -1,9 +1,8 @@
 build:
-	@gulp build-all-sites
+	@node_modules/.bin/gulp build-all-sites
 	@rsync -av static/a/ ../../website/a/
 
 all: build
 
 dev:
-	@gulp --cwd site.landing --exportDir=./../../../website/a/site.landing/ --devMode
-
+	@node_modules/.bin/gulp --cwd site.landing --exportDir=./../../../website/a/site.landing/ --devMode
