--- a/docs/_data/members.yml
+++ b/docs/_data/members.yml
@@ -1,83 +1,113 @@
-- name: Devrim Yasar
-  title: Co-founder
-  role: CEO
-  github: devrim
-  twitter: devrimyasar
-  linkedin: dyasar
+- title: Founders
+  members:
+    - name: Devrim Yasar
+      title: Co-founder
+      role: CEO
+      github: devrim
+      twitter: devrimyasar
+      linkedin: dyasar
 
-- name: Sinan Yasar
-  title: Co-founder
-  role: Chief Product Architect
-  github: sinan
-  twitter: sinanyasar
-  linkedin: sinanyasar
+    - name: Sinan Yasar
+      title: Co-founder
+      role: Chief Product Architect
+      github: sinan
+      twitter: sinanyasar
+      linkedin: sinanyasar
 
-- name: Gokmen Goksel
-  title: Engineering Lead
-  twitter: gokmen
-  linkedin: gokmen
-  github: gokmen
+- title: Business Team
+  positions:
+    count: 1
+    link: https://jobs.lever.co/koding/4ee5df76-953e-4922-b8fb-dfb82d2fe5a9
+  members:
 
-- name: Cihangir Savas
-  title: Engineering Lead
-  twitter: cihangirsavas
-  linkedin: cihangirsavas
-  github: cihangir
+    - name: Gabriel Padva
+      title: BD & Partnerships
+      linkedin: gabrielpadva
 
-- name: Sonmez Kartal
-  title: Engineer
-  role: DevOps
-  twitter: sonmezkartal
-  linkedin: sonmezkartal
-  github: szkl
+    - name: Merrill Freund
+      title: Public Relations
+      linkedin: merrillfreund
 
-- name: Alex Ionochkin
-  title: Engineer
-  linkedin: alexander-ionochkin-71050a28
-  github: alex-ionochkin
+- title: Engineering
+  positions:
+    count: 5
+    link: https://jobs.lever.co/koding
+  members:
+    - name: Gokmen Goksel
+      title: Engineering Lead
+      twitter: gokmen
+      linkedin: gokmen
+      github: gokmen
 
-- name: Mehmet Ali Savas
-  title: Engineer
-  linkedin: mehmet-ali-savas-511596105
-  github: mehmetalisavas
+    - name: Cihangir Savas
+      title: Engineering Lead
+      twitter: cihangirsavas
+      linkedin: cihangirsavas
+      github: cihangir
 
-- name: Rafal Jeczalik
-  title: Engineer
-  github: rjeczalik
+    - name: Sonmez Kartal
+      title: Engineer
+      role: DevOps
+      twitter: sonmezkartal
+      linkedin: sonmezkartal
+      github: szkl
 
-- name: Hakan Karadis
-  title: Engineer
-  twitter: hkaradi1
-  linkedin: hakankaradis
-  github: hakankaradis
+    - name: Alex Ionochkin
+      title: Engineer
+      linkedin: alexander-ionochkin-71050a28
+      github: alex-ionochkin
 
-- name: Khaled Wagdy
-  title: Support Engineer
-  github: kwagdy
+    - name: Mehmet Ali Savas
+      title: Engineer
+      linkedin: mehmet-ali-savas-511596105
+      github: mehmetalisavas
 
-- name: Fahrettin Tasdelen
-  title: Product Design Lead
-  twitter: ftasdelen
-  linkedin: ftasdelen
+    - name: Rafal Jeczalik
+      title: Engineer
+      github: rjeczalik
 
-# - cssClass: 'invisible' # this is a spacer if needed
-- name: Hector Caceres
-  title: Support Engineer
-  github: hectork01
+    - name: Hakan Karadis
+      title: Engineer
+      twitter: hkaradi1
+      linkedin: hakankaradis
+      github: hakankaradis
 
-- name: Arsal Asal
-  title: Creative Producer
-  linkedin: arsal-asal-1a963210b
+    - name: Can Sirin
+      title: Frontend Developer
+      github: cansirin
 
-- name: Can Sirin
-  title: Frontend Developer
-  github: cansirin
+    - name: Andrew J Casal
+      title: Frontend Developer
+      github: andrewjcasal
 
-- name: Andrew J Casal
-  title: Frontend Developer
-  github: andrewjcasal
+    - name: Paweł Knap
+      title: Engineer
+      github: ppknap
 
-- name: Paweł Knap
-  title: Engineer
-  github: ppknap
+- title: Creative
+  positions:
+    count: 1
+    link: https://jobs.lever.co/koding/930587d8-6c62-4d62-b827-ee9b83614e33
+  members:
 
+    - name: Fahrettin Tasdelen
+      title: Product Design Lead
+      twitter: ftasdelen
+      linkedin: ftasdelen
+    # - cssClass: 'invisible' # this is a spacer if needed
+    - name: Arsal Asal
+      title: Creative Producer
+      linkedin: arsal-asal-1a963210b
+
+- title: QA / Support
+  positions:
+    count: 2
+    link: https://jobs.lever.co/koding
+  members:
+    - name: Khaled Wagdy
+      title: Support Engineer
+      github: kwagdy
+
+    - name: Hector Caceres
+      title: Support Engineer
+      github: hectork01
