Run official image mongo:2.4 for mongo service
Signed-off-by: Sonmez Kartal <sonmez@koding.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
       - .:/opt/koding
 
   mongo:
-    image: koding/mongo
+    image: mongo:2.4
 
   postgres:
     image: koding/postgres
