Add mongod option --smallfiles
Signed-off-by: Sonmez Kartal <sonmez@koding.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
 
   mongo:
     image: mongo:2.4
-    command: --nojournal --noprealloc
+    command: --nojournal --noprealloc --smallfiles
 
   postgres:
     image: koding/postgres
