--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "component-os": "0.0.1",
     "convert-source-map": "1.1.0",
     "dateformat": "1.0.11",
+    "emmet": "1.6.1",
     "emoji-categories": "0.1.0",
     "emojify.js": "1.1.0",
     "emojis-keywords": "1.0.3",
