--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": "true",
   "dependencies": {
-    "@koding/bongo-client": "koding/bongo-client#remove_broker",
+    "@koding/bongo-client": "koding/bongo-client#v0.4",
     "@koding/getscript": "0.1.0",
     "@koding/inherits-underscore": "0.2.0",
     "accounting": "0.4.1",
@@ -13,7 +13,7 @@
     "bluebird": "2.8.2",
     "bowser": "1.0.0",
     "brace": "koding/brace#koding",
-    "broker-client": "koding/broker-client#remove_broker",
+    "broker-client": "koding/broker-client#v0.4",
     "card-validator": "2.3.0",
     "classnames": "2.1.3",
     "component-os": "0.0.1",
