scripts: use coverage script to check test coverages

--- a/go/src/socialapi/Makefile
+++ b/go/src/socialapi/Makefile
@@ -53,50 +53,38 @@ build:
 	@echo "building with ../../build.sh"
 	../../build.sh
 
+# TODO
+# need to add -race flag for tests
 testpresence:
 	@echo "$(OK_COLOR)--> presence tests... $(NO_COLOR)"
-	@`which go` test -race -c workers/presence/*.go
-	@./presence.test $(DBG) $(EXTRAS) -c $(CONFIG)
-	@rm ./presence.test
+	$(KODINGDIR)/scripts/gotest_socialapi.sh socialapi/workers/presence "-c=./go/src/socialapi/config/dev.toml"
+
 	@echo "$(OK_COLOR)--> presence api tests... $(NO_COLOR)"
-	@`which go` test -race -c workers/presence/api/*.go
-	@./api.test $(DBG) $(EXTRAS) -c $(CONFIG)
-	@rm ./api.test
+	$(KODINGDIR)/scripts/gotest_socialapi.sh socialapi/workers/presence/api "-c=./go/src/socialapi/config/dev.toml"
+
 	@echo "$(OK_COLOR)--> presence client tests... $(NO_COLOR)"
-	@`which go` test -race -c workers/presence/client/*.go
-	@./client.test $(DBG) $(EXTRAS) -c $(CONFIG)
-	@rm ./client.test
+	$(KODINGDIR)/scripts/gotest_socialapi.sh socialapi/workers/presence/client "-c=./go/src/socialapi/config/dev.toml"
 
 testteam: testteamunit testteamintegration
 
 testteamunit:
 	@echo "$(OK_COLOR)--> team unit tests... $(NO_COLOR)"
-	@`which go` test -c workers/team/*.go
-	@./team.test $(DBG) $(EXTRAS) -c $(CONFIG)
-	@rm ./team.test
+	$(KODINGDIR)/scripts/gotest_socialapi.sh socialapi/workers/team
 
 testteamintegration:
 	@echo "$(OK_COLOR)--> team integration tests... $(NO_COLOR)"
-	@`which go` test -c workers/team/tests/*.go
-	@./tests.test $(DBG) $(EXTRAS) -c $(CONFIG)
-	@rm ./tests.test
+	$(KODINGDIR)/scripts/gotest_socialapi.sh socialapi/workers/team/tests
 
 testalgolia:
 	@echo "$(OK_COLOR)--> algoliaconnector unit tests... $(NO_COLOR)"
-	@`which go` test -c workers/algoliaconnector/algoliaconnector/*.go
-	@./algoliaconnector.test $(DBG) $(EXTRAS) -c $(CONFIG)
-	@rm ./algoliaconnector.test
+	$(KODINGDIR)/scripts/gotest_socialapi.sh socialapi/workers/algoliaconnector/algoliaconnector
 
 # testcollaboration runs the unit and integration tests of collaboration worker
 testcollaboration:
 	@echo "$(OK_COLOR)--> collaboration tests... $(NO_COLOR)"
-	@`which go` test -c workers/collaboration/tests/*.go
-	@./collaboration.test $(DBG) $(EXTRAS) -c $(CONFIG)
-	@rm  ./collaboration.test
+	$(KODINGDIR)/scripts/gotest_socialapi.sh socialapi/workers/collaboration/tests
 
-	@`which go` test -c workers/collaboration/*.go
-	@./collaboration.test -kite-init $(DBG) $(EXTRAS) -c $(CONFIG)
-	@rm  ./collaboration.test
+	$(KODINGDIR)/scripts/gotest_socialapi.sh socialapi/workers/collaboration "-kite-init -c=./go/src/socialapi/config/dev.toml"
 
 testmodels:
 	@echo "$(OK_COLOR)--> model tests... $(NO_COLOR)"
@@ -104,20 +92,14 @@ testmodels:
 
 testmailsender:
 	@echo "$(OK_COLOR)--> Mailsender tests... $(NO_COLOR)"
-	@`which go` test -c workers/email/emailsender/*.go
-	@./emailsender.test $(DBG) $(EXTRAS) -c $(CONFIG)
-	@rm  ./emailsender.test
+	$(KODINGDIR)/scripts/gotest_socialapi.sh socialapi/workers/email/emailsender
 
 testmail:
 	@echo "$(OK_COLOR)--> mail tests... $(NO_COLOR)"
-	@`which go` test -c workers/email/mailparse/models/*.go
-	@./models.test $(DBG) $(EXTRAS) -c $(CONFIG)
-	@rm ./models.test
+	$(KODINGDIR)/scripts/gotest_socialapi.sh socialapi/workers/email/mailparse/models
 
 	@echo "$(OK_COLOR)--> mail integration tests... $(NO_COLOR)"
-	@`which go` test -c workers/email/mailparse/tests/*.go
-	@./tests.test $(DBG) $(EXTRAS) -c $(CONFIG)
-	@rm ./tests.test
+	$(KODINGDIR)/scripts/gotest_socialapi.sh socialapi/workers/email/mailparse/tests
 
 testpayment:
 	@echo "$(OK_COLOR)--> payment tests... $(NO_COLOR)"
@@ -125,20 +107,14 @@ testpayment:
 
 testintegration:
 	@echo "$(OK_COLOR)--> api integration tests... $(NO_COLOR)"
-	@`which go` test -c tests/*.go
-	@./main.test $(DBG) $(EXTRAS) -c $(CONFIG)
-	@rm ./main.test
+	$(KODINGDIR)/scripts/gotest_socialapi.sh socialapi/tests
 
 testrealtime:
 	@echo "$(OK_COLOR)--> realtime tests... $(NO_COLOR)"
-	@`which go` test -c workers/realtime/realtime/*.go
-	@./realtime.test $(DBG) $(EXTRAS) -c $(CONFIG)
-	@rm ./realtime.test
+	$(KODINGDIR)/scripts/gotest_socialapi.sh socialapi/workers/realtime/realtime
 
 	@echo "$(OK_COLOR)--> realtime model tests... $(NO_COLOR)"
-	@`which go` test -c workers/realtime/models/*.go
-	@./models.test $(DBG) $(EXTRAS) -c $(CONFIG)
-	@rm ./models.test
+	$(KODINGDIR)/scripts/gotest_socialapi.sh socialapi/workers/realtime/models
 
 
 testapi: testcollaboration testmailsender testmail testmodels \
@@ -154,6 +130,4 @@ testapi: testcollaboration testmailsender testmail testmodels \
 	@echo "$(OK_COLOR)==> Running Integration tests $(NO_COLOR)"
 
 	@echo "$(OK_COLOR)--> handler tests... $(NO_COLOR)"
-	@`which go` test -c workers/common/handler/*.go
-	@./handler.test $(DBG) $(EXTRAS) -c $(CONFIG)
-	@rm ./handler.test
+	$(KODINGDIR)/scripts/gotest_socialapi.sh socialapiworkers/common/handler
