scripts: add flag with env run & compile flag support

--- a/go/src/socialapi/Makefile
+++ b/go/src/socialapi/Makefile
@@ -53,17 +53,15 @@ build:
 	@echo "building with ../../build.sh"
 	../../build.sh
 
-# TODO
-# need to add -race flag for tests
 testpresence:
 	@echo "$(OK_COLOR)--> presence tests... $(NO_COLOR)"
-	$(KODINGDIR)/scripts/gotest_socialapi.sh socialapi/workers/presence "-c=./go/src/socialapi/config/dev.toml"
+	@env COMPILE_FLAGS="-race" $(KODINGDIR)/scripts/gotest_socialapi.sh socialapi/workers/presence "-c=./go/src/socialapi/config/dev.toml"
 
 	@echo "$(OK_COLOR)--> presence api tests... $(NO_COLOR)"
-	$(KODINGDIR)/scripts/gotest_socialapi.sh socialapi/workers/presence/api "-c=./go/src/socialapi/config/dev.toml"
+	@env COMPILE_FLAGS="-race" $(KODINGDIR)/scripts/gotest_socialapi.sh socialapi/workers/presence/api "-c=./go/src/socialapi/config/dev.toml"
 
 	@echo "$(OK_COLOR)--> presence client tests... $(NO_COLOR)"
-	$(KODINGDIR)/scripts/gotest_socialapi.sh socialapi/workers/presence/client "-c=./go/src/socialapi/config/dev.toml"
+	@env COMPILE_FLAGS="-race" $(KODINGDIR)/scripts/gotest_socialapi.sh socialapi/workers/presence/client "-c=./go/src/socialapi/config/dev.toml"
 
 testteam: testteamunit testteamintegration
 
