wercker: add env variable for -race flag

--- a/wercker.yml
+++ b/wercker.yml
@@ -104,10 +104,10 @@ build:
         code: scripts/wercker/run-command go/src/koding/kites/e2etest/e2etest.sh
     - script:
         name: test providers
-        code: scripts/wercker/run-command ./run exec ./scripts/gocover.sh koding/kites/kloud/provider/...
+        code: env COMPILE_FLAGS="-race" scripts/wercker/run-command ./run exec ./scripts/gotest.sh koding/kites/kloud/provider/...
     - script:
         name: test koding/api
-        code: scripts/wercker/run-command ./run exec ./scripts/gocover.sh koding/api/...
+        code: env COMPILE_FLAGS="-race" scripts/wercker/run-command ./run exec ./scripts/gotest.sh koding/api/...
     - script:
         name: build backend finished
         code: scripts/notify-cebeci.sh "build" "<$WERCKER_BUILD_URL|build> of $WERCKER_GIT_BRANCH - build backend finished" "building" 40
