--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "konstraints": "0.1.5",
     "lodash": "4.17.4",
     "lodash.clonedeep": "4.5.0",
+    "lru-cache": "4.0.2",
     "marked": "0.3.6",
     "mime": "1.3.4",
     "minimist": "1.2.0",
