add link to marathon guide in nav-bar

--- a/docs/_data/nav-docs.yaml
+++ b/docs/_data/nav-docs.yaml
@@ -18,6 +18,8 @@
     title: Create Google Compute Engine stack
   - id: creating-a-softlayer-stack
     title: Create SoftLayer stack
+  - id: creating-a-marathon-stack
+    title: Create Marathon stack
   - id: creating-a-vagrant-stack
     title: Create Vagrant stack
 - title: Getting more from Koding
