Fix partial paths
Signed-off-by: Sonmez Kartal <sonmez@koding.com>

--- a/.coffeelintignore
+++ b/.coffeelintignore
@@ -1,31 +1,31 @@
 node_modules/
-app/lib/components
-app/lib/react
-ide/lib/index.coffee
-ide/lib/collaborationcontroller.coffee
-ide/lib/views/contentsearch/idecontentsearch.coffee
-ide/lib/test/browser/index.coffee
-app/lib/applicationmanager.coffee
-app/lib/providers/environmentsmachinestatemodal.coffee
-app/lib/routehandler.coffee
-app/lib/socialapicontroller.coffee
-app/lib/util/showError.coffee
-app/lib/terminal/inputhandler.coffee
-app/lib/providers/computeeventlistener.coffee
-app/lib/activitycontroller.coffee
-app/lib/commonviews/avatarviews/avatarview.coffee
-app/lib/commonviews/dnduploader.coffee
-app/lib/flux/environment/actions.coffee
-app/lib/navigation/navigationmachineitem.coffee
-app/lib/providers/computecontroller.ui.coffee
-app/lib/providers/computehelpers.coffee
-app/lib/providers/computestatechecker.coffee
-app/lib/terminal/createansicontrolcodereader.coffee
-app/lib/terminal/terminal.coffee
-app/lib/util/expandReactivityUsernames.coffee
-app/lib/util/expandUsernames.coffee
-app/lib/util/nicetime.coffee
-app/lib/util/pistachio.coffee
+client/app/lib/components
+client/app/lib/react
+client/ide/lib/index.coffee
+client/ide/lib/collaborationcontroller.coffee
+client/ide/lib/views/contentsearch/idecontentsearch.coffee
+client/ide/lib/test/browser/index.coffee
+client/app/lib/applicationmanager.coffee
+client/app/lib/providers/environmentsmachinestatemodal.coffee
+client/app/lib/routehandler.coffee
+client/app/lib/socialapicontroller.coffee
+client/app/lib/util/showError.coffee
+client/app/lib/terminal/inputhandler.coffee
+client/app/lib/providers/computeeventlistener.coffee
+client/app/lib/activitycontroller.coffee
+client/app/lib/commonviews/avatarviews/avatarview.coffee
+client/app/lib/commonviews/dnduploader.coffee
+client/app/lib/flux/environment/actions.coffee
+client/app/lib/navigation/navigationmachineitem.coffee
+client/app/lib/providers/computecontroller.ui.coffee
+client/app/lib/providers/computehelpers.coffee
+client/app/lib/providers/computestatechecker.coffee
+client/app/lib/terminal/createansicontrolcodereader.coffee
+client/app/lib/terminal/terminal.coffee
+client/app/lib/util/expandReactivityUsernames.coffee
+client/app/lib/util/expandUsernames.coffee
+client/app/lib/util/nicetime.coffee
+client/app/lib/util/pistachio.coffee
 client/home/lib/integrations
 client/home/lib/billing/components
 client/home/lib/homeappview.coffee
