wercker: update koding/api tests with command

--- a/wercker.yml
+++ b/wercker.yml
@@ -104,7 +104,7 @@ build:
         code: scripts/wercker/run-command ./scripts/gotests.sh kites koding/kites/kloud/provider/... koding/kites/kloud/credential/... koding/kites/kloud/stack/... koding/kites/kloud/kloud/...
     - script:
         name: test koding/api
-        code: env COMPILE_FLAGS="-race" scripts/wercker/run-command ./scripts/gotests.sh koding/api/...
+        code: scripts/wercker/run-command ./scripts/gotests.sh koding/api/...
     - script:
         name: build backend finished
         code: scripts/notify-cebeci.sh "build" "<$WERCKER_BUILD_URL|build> of $WERCKER_GIT_BRANCH - build backend finished" "building" 40
