Execute `npm` with absolute path
Signed-off-by: Sonmez Kartal <sonmez@koding.com>

--- a/.ebextensions/001_serversettings.config
+++ b/.ebextensions/001_serversettings.config
@@ -14,9 +14,9 @@ commands:
   06-command-link:
     command: "ln --force --symbolic --verbose /usr/local/node-v6.9.4-linux-x64/bin/{node,npm} /usr/local/bin/"
   06-command-npm:
-    command: "npm install --global npm@4"
+    command: "/usr/local/bin/npm install --global npm@4"
   08-command:
-    command: "npm install -g coffee-script@1.12.2 || echo coffeescript already installed"
+    command: "/usr/local/bin/npm install -g coffee-script@1.12.2 || echo coffeescript already installed"
   09-command:
     command: "rm -rf /usr/local/go && curl -s https://storage.googleapis.com/golang/go1.7.1.linux-amd64.tar.gz | tar -v -C /usr/local -xz"
   10-command:
