--- a/wercker.yml
+++ b/wercker.yml
@@ -59,6 +59,9 @@ build:
         name: create data files
         code: touch INSTANCE_DATA
     - script:
+        name: run coffeelint
+        code: scripts/wercker/run-command scripts/lint-coffeescript.sh
+    - script:
         name: launch test hosts
         code: |
           scripts/wercker/run-command scripts/wercker/launch-test-hosts | tee INSTANCE_DATA
